# Discord-ModLoader

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
asar/: index.js
configs/templates/: vencord.toml
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs
crates/gui/src/utils/: hoverable.rs
crates/libdiscord-modloader/: Cargo.toml
crates/libdiscord-modloader/src/: config.rs  discord.rs  lib.rs  paths.rs  unix.rs  windows.rs
crates/libdiscord-modloader/src/asar/: custom_profile.js  index.js
src/: config.rs  discord.rs  env.rs  lib.rs  main.rs  windows.rs
src/detours/: fs.rs  mod.rs  utils.rs  win32.rs
templates/: moonlight.toml
