[package]
edition = "2021"
name = "discord-modloader"
description = "An in-memory mod loader for Discord"
version = "2.0.0"
license = "LGPL-3.0"
authors = ["Megumin <megumin@megu.dev>"]
repository = "https://github.com/MeguminSama/Discord-ModLoader/"

[lib]
crate-type = ["cdylib", "lib"]
name = "libdiscordmodloader"

[dependencies]
asar = "0.3.0"
clap = { version = "4.5.20", features = ["derive"] }
dioxus = "0.5.6"
dirs = "5.0.1"
freya = { git = "https://github.com/marc2332/freya.git", version = "0.2.2" }
serde = { version = "1.0.210", features = ["serde_derive"] }
toml = "0.8.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winbase",
    "handleapi",
    "minwindef",
    "consoleapi",
    "winnt",
    "memoryapi",
    "namedpipeapi",
] }
detours-sys = { version = "0.1.2" }
widestring = "1.1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.167"
retour = { version = "0.3.1", features = ["static-detour"] }

[package.metadata.packager]
product-name = "Discord Modloader"
identifier = "dev.megu.discord.modloader"
authors = ["Megumin <megumin@megu.dev"]
homepage = "https://github.com/MeguminSama/Discord-ModLoader"
out-dir = "./dist"
before-packaging-command = "cargo build --release --all"
resources = [
    "README.md",
    "LICENSE",
    "templates",
    { src = "target/release/libdiscordmodloader.dll", target = "libdiscordmodloader.dll" },
    { src = "target/release/libdiscordmodloader.so", target = "libdiscordmodloader.so" },
]
log-level = "trace"
icons = [
    "assets/logo_development.svg",
    "assets/logo_development.ico",
    "assets/32x32.png",
    "assets/64x64.png",
    "assets/128x128.png",
    "assets/256x256.png",
    "assets/512x512.png",
    "assets/1024x1024.png",
    "assets/2048x2048.png",
    "assets/4096x4096.png",
]
