[workspace]
members = ["crates/*"]

[package]
edition = "2021"
name = "discord-modloader"
description = "An in-memory mod loader for Discord"
version = "2.0.0"
license = "LGPL-3.0"
authors = ["Megumin <megumin@megu.dev>"]
repository = "https://github.com/MeguminSama/Discord-ModLoader/"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
libdiscord-modloader = { path = "crates/libdiscord-modloader" }
gui = { path = "crates/gui" }

[package.metadata.packager]
product-name = "Discord Modloader"
identifier = "dev.megu.discord.modloader"
authors = ["Megumin <megumin@megu.dev"]
homepage = "https://github.com/MeguminSama/Discord-ModLoader"
out-dir = "./dist"
before-packaging-command = "cargo build --release --all"
resources = [
    "README.md",
    "LICENSE",
    "templates",
    { src = "target/release/libdiscordmodloader.dll", target = "libdiscordmodloader.dll" },
    { src = "target/release/libdiscordmodloader.so", target = "libdiscordmodloader.so" },
]
log-level = "trace"
icons = [
    "assets/logo_development.svg",
    "assets/logo_development.ico",
    "assets/32x32.png",
    "assets/64x64.png",
    "assets/128x128.png",
    "assets/256x256.png",
    "assets/512x512.png",
    "assets/1024x1024.png",
    "assets/2048x2048.png",
    "assets/4096x4096.png",
]
